option java_package = "com.lianggzone.netty.proto.response";
option java_outer_classname = "ResponseChatProtocols";
 message ResponseChatProtocol {
     message CommonHeader {
 		required uint32 Command = 1;//协议命令 1鉴权 2心跳 3订阅 4消息 5消息反馈
 		required string SeqId = 2;//序列ID
 		required string Version = 3;//版本
 		required uint32 Status = 4;//返回状态 1成功 2失败 3鉴权失败
 		required string TerverTime = 5;//服务器时间
 		optional string Message = 6;//返回消息
 	}
 	required CommonHeader Header = 1;//协议头
 	optional bytes Body = 2;//协议内容
 }
